# NewCatroid

./: .gitignore  README.md  build.gradle  settings.gradle
catroid/: build.gradle  google-services-template.json
catroid/catroid/release/: output-metadata.json
catroid/catroid/release/baselineProfiles/0/: catroid-catroid-release.dm
catroid/catroid/release/baselineProfiles/1/: catroid-catroid-release.dm
catroid/danvex/release/: output-metadata.json
catroid/danvex/release/baselineProfiles/0/: catroid-danvex-release.dm
catroid/danvex/release/baselineProfiles/1/: catroid-danvex-release.dm
catroid/gradle/: code_quality_tasks.gradle
catroid/src/androidTest/assets/: backpack.json
catroid/src/apkplayer/: AndroidManifest.xml
catroid/src/apkplayer/res/values/: styles.xml
catroid/src/apktemplate/: AndroidManifest.xml
catroid/src/apktemplate/res/values/: strings.xml  themes.xml
catroid/src/danvex/res/values-ru/: strings.xml
catroid/src/main/: AndroidManifest.xml
catroid/src/main/assets/: vnc_shader.frag
catroid/src/main/assets/catblocks/: CatBlocks.js
catroid/src/main/assets/python3.12/: _sysconfigdata__linux_.py  tarfile.py
catroid/src/main/assets/python3.12/config-3.12/: Makefile
catroid/src/main/assets/qemu_x86_64/: libdw.so.1  libelf.so.1  libjpeg.so.8  qemu-img
catroid/src/main/assets/qemu_x86_64/lib/: libjack.so.0
catroid/src/main/assets/qemu_x86_64/share/qemu/: trace-events-all
catroid/src/main/cpp/: CMakeLists.txt  catroid.cpp  example_core.cpp  newcatroid_gl_api.h  onnxtest.cpp
catroid/src/main/cpp/include/python3.12/: pyconfig.h
catroid/src/main/java/org/catrobat/catroid/: CatroidApplication.java  ProjectManager.java
catroid/src/main/libs/test/: AndroidManifest.xml  R.txt
catroid/src/main/libs/test/res/values-ar/: values-ar.xml
catroid/src/main/libs/test/res/values-az/: values-az.xml
catroid/src/main/libs/test/res/values-bg/: values-bg.xml
catroid/src/main/libs/test/res/values-bn/: values-bn.xml
catroid/src/main/libs/test/res/values-bs/: values-bs.xml
catroid/src/main/libs/test/res/values-ca/: values-ca.xml
catroid/src/main/libs/test/res/values-cs/: values-cs.xml
catroid/src/main/libs/test/res/values-da/: values-da.xml
catroid/src/main/libs/test/res/values-de/: values-de.xml
catroid/src/main/libs/test/res/values-el/: values-el.xml
catroid/src/main/libs/test/res/values-en-rAU/: values-en-rAU.xml
catroid/src/main/libs/test/res/values-en-rCA/: values-en-rCA.xml
catroid/src/main/libs/test/res/values-en-rGB/: values-en-rGB.xml
catroid/src/main/libs/test/res/values-es/: values-es.xml
catroid/src/main/libs/test/res/values-eu-rES/: values-eu-rES.xml
catroid/src/main/libs/test/res/values-fa/: values-fa.xml
catroid/src/main/libs/test/res/values-fa-rIR/: values-fa-rIR.xml
catroid/src/main/libs/test/res/values-fi/: values-fi.xml
catroid/src/main/libs/test/res/values-fr/: values-fr.xml
catroid/src/main/libs/test/res/values-gl/: values-gl.xml
catroid/src/main/libs/test/res/values-gu/: values-gu.xml
catroid/src/main/libs/test/res/values-hi/: values-hi.xml
catroid/src/main/libs/test/res/values-hr/: values-hr.xml
catroid/src/main/libs/test/res/values-hu/: values-hu.xml
catroid/src/main/libs/test/res/values-in/: values-in.xml
catroid/src/main/libs/test/res/values-it/: values-it.xml
catroid/src/main/res/drawable/: brick_1h_neural.xml  brick_categories_neural.xml  brick_neural_1h.xml  brick_neural_2h.xml  brick_neural_3h.xml  button_outline.xml  dialog_background.xml  formula_field_background_normal.xml  formula_field_background_pressed.xml  formula_field_selector.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_rotate_scale_handle.xml  interactive_border.xml  testtovp.xml
catroid/src/main/res/drawable-xhdpi/: split_scene_up_24px.xml
catroid/src/main/res/drawable-xxhdpi/: airplay_24px.xml
catroid/src/main/res/layout/: activity_game.xml  activity_library_editor.xml  activity_loading.xml  activity_main_menu_splashscreen.xml  brick_add_edit.xml  brick_add_radio.xml  brick_apply_3d_force.xml  brick_apply_angular_impulse.xml  brick_apply_force.xml  brick_apply_impulse.xml  brick_apply_torque.xml  brick_ask_gemini.xml  brick_ask_gemini2.xml  brick_ask_gpt.xml  brick_async_repeat.xml  brick_big_ask.xml  brick_camera_look_at.xml  brick_cast_ray.xml  brick_catch.xml  brick_category_internet.xml  brick_category_libs.xml  brick_category_neural.xml  brick_category_threed.xml  brick_change_height.xml  brick_change_width.xml  brick_choose_file.xml  brick_clear_scene.xml  brick_clone_and_name.xml  brick_connect_server.xml  brick_copy_project_file.xml  brick_copy_text.xml  brick_create_3d_object.xml  brick_create_cube.xml  brick_create_dialog.xml  brick_create_disk.xml  brick_create_distance_joint.xml  brick_create_float.xml  brick_create_gear_joint.xml  brick_create_prismatic_joint.xml  brick_create_pulley_joint.xml  (+233 more)
catroid/src/main/res/menu/: editor_toolbar_menu.xml  editor_tools_menu.xml  library_editor_menu.xml  menu_backpack_activity.xml  menu_main_menu.xml  menu_project_activity.xml  menu_projects_activity.xml  menu_script_activity.xml
catroid/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
catroid/src/main/res/values-en-rGB/: strings.xml
catroid/src/main/res/values-pt-rBR/: strings.xml
catroid/src/main/res/values-ru/: strings.xml
catroid/src/main/res/xml/: file_paths.xml  preferences.xml  provider_paths.xml
catroid/src/pocketCodeBeta/res/values/: strings.xml
catroid/src/standalone/: AndroidManifest.xml
catroid/src/standalone/res/values/: styles.xml
catroid/standalone/release/: output-metadata.json
gradle/wrapper/: gradle-wrapper.properties
lunoscript-annotations/: build.gradle
lunoscript-processor/: build.gradle
vncclient/: build.gradle
vncclient/src/main/cpp/: CMakeLists.txt
vncclient/src/main/cpp/libvncserver/include/rfb/: rfbclient.h
vncclient/src/main/cpp/libvncserver/src/common/: sockets.c
vncclient/src/main/cpp/libvncserver/src/libvncclient/: rfbclient.c  sockets.c  vncviewer.c
(+858 files in other folders)
